mobile view overflowing solved

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99000000', e
 }
 .intro h1 {
 	color: #fff;
-	font-size: 64px;
+	font-size: 55px;
 	font-weight: 700;
 	letter-spacing: -1px;
 	margin-top: 0;
